unpackaged/objects/EAO_2015__c.object
<CustomObject>
  <description>Temp standalone object just to handle the leads during EAO 2015. - Owner = Kattis</description>
  <fields>
    <fullName>ANKYLOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ANKYLOS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ASTRA_TECH_Implant_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASTRA TECH Implant System</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>ATLANTIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATLANTIS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>By_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Email</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>By_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By Phone</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Afghanistan</fullName>
        </value>
        <value>
          <fullName>Albania</fullName>
        </value>
        <value>
          <fullName>Algeria</fullName>
        </value>
        <value>
          <fullName>Andorra</fullName>
        </value>
        <value>
          <fullName>Angola</fullName>
        </value>
        <value>
          <fullName>Antigua &amp; Deps</fullName>
        </value>
        <value>
          <fullName>Argentina</fullName>
        </value>
        <value>
          <fullName>Armenia</fullName>
        </value>
        <value>
          <fullName>Australia</fullName>
        </value>
        <value>
          <fullName>Austria</fullName>
        </value>
        <value>
          <fullName>Azerbaijan</fullName>
        </value>
        <value>
          <fullName>Bahamas</fullName>
        </value>
        <value>
          <fullName>Bahrain</fullName>
        </value>
        <value>
          <fullName>Bangladesh</fullName>
        </value>
        <value>
          <fullName>Barbados</fullName>
        </value>
        <value>
          <fullName>Belarus</fullName>
        </value>
        <value>
          <fullName>Belgium</fullName>
        </value>
        <value>
          <fullName>Belize</fullName>
        </value>
        <value>
          <fullName>Benin</fullName>
        </value>
        <value>
          <fullName>Bhutan</fullName>
        </value>
        <value>
          <fullName>Bolivia</fullName>
        </value>
        <value>
          <fullName>Bosnia Herzegovina</fullName>
        </value>
        <value>
          <fullName>Botswana</fullName>
        </value>
        <value>
          <fullName>Brazil</fullName>
        </value>
        <value>
          <fullName>Brunei</fullName>
        </value>
        <value>
          <fullName>Bulgaria</fullName>
        </value>
        <value>
          <fullName>Burkina</fullName>
        </value>
        <value>
          <fullName>Burundi</fullName>
        </value>
        <value>
          <fullName>Cambodia</fullName>
        </value>
        <value>
          <fullName>Cameroon</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>DENSTPLY_Implants_Magazine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DENSTPLY Implants Magazine</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>DENTSPLY_Implants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DENTSPLY Implants</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>More_Information__c</fullName>
    <label>More Information</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Others__c</fullName>
    <label>Others</label>
    <length>150</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
  </fields>
  <fields>
    <fullName>Postal_Code__c</fullName>
    <label>Postal Code</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Dental Assistant</fullName>
        </value>
        <value>
          <fullName>Dental Hygienist</fullName>
        </value>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>Denturist</fullName>
        </value>
        <value>
          <fullName>Endodontist</fullName>
        </value>
        <value>
          <fullName>General dentist</fullName>
        </value>
        <value>
          <fullName>General Manager</fullName>
        </value>
        <value>
          <fullName>Implant Manager</fullName>
        </value>
        <value>
          <fullName>Implantologist</fullName>
        </value>
        <value>
          <fullName>Lab Owner</fullName>
        </value>
        <value>
          <fullName>Maxillofacial Surgeon</fullName>
        </value>
        <value>
          <fullName>Oral Surgeon</fullName>
        </value>
        <value>
          <fullName>Other staff Dental</fullName>
        </value>
        <value>
          <fullName>Owner</fullName>
        </value>
        <value>
          <fullName>Periodontist</fullName>
        </value>
        <value>
          <fullName>Post Graduate trainee</fullName>
        </value>
        <value>
          <fullName>Prosthodontist</fullName>
        </value>
        <value>
          <fullName>Purchaser</fullName>
        </value>
        <value>
          <fullName>Registrar</fullName>
        </value>
        <value>
          <fullName>Restorative Dentist</fullName>
        </value>
        <value>
          <fullName>Sales Manager</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SIMPLANT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SIMPLANT</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>STEPPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>STEPPS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SYMBIOS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SYMBIOS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sales_Reps_Visits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Reps Visits</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Scientific_documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scientific documentation</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <length>100</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Dental laboratory owner</fullName>
        </value>
        <value>
          <fullName>Dental Other (i.e Auxiliary staff Nurse, Hygienist etc.)</fullName>
        </value>
        <value>
          <fullName>Dental Technician</fullName>
        </value>
        <value>
          <fullName>Dentist primarily doing both surgery and pros (implantologist)</fullName>
        </value>
        <value>
          <fullName>Dentist primarily doing only the restorative portion</fullName>
        </value>
        <value>
          <fullName>Denturist not involved in implants</fullName>
        </value>
        <value>
          <fullName>Surgeon doing primarily only the surgical portion</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be used and visible only for CRM-team. Have we updated this to the real Contact?</description>
    <inlineHelpText>Will be used and visible only for CRM-team. Have we updated this to the real Contact?</inlineHelpText>
    <label>Updated</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>XiVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>XiVE</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>e_Newsletter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>e-Newsletter</label>
    <type>Checkbox</type>
  </fields>
  <label>EAO Card</label>
  <nameField>
    <displayFormat>EAO{00000}</displayFormat>
    <label>Card id</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>EAO Cards</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>